
Changelog
=========

0.2.0 - (2011-07-27)
--------------------

* Include package data
  [aclark]

0.1.0 - (2011-07-27)
--------------------

* Initial release
  [aclark]